# cpp-project

./: ..gitlab-ci.yml.un~  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  IGrille.h  IInteractionJoueur.h  IJeu.h  IJoueur.h  InterfaceUtilisateur.cpp  README.md  TypesJeu.h  configjeu.cpp  grille.cpp  grille.h  grillefactory.cpp  jeton.h  jeufactory.cpp  jeufactory.h  jeumorpion.cpp  jeumorpion.h  jeupuissance4.cpp  jeupuissance4.h  joueur.h  joueurfactory.cpp  joueurfactory.h  joueurhumain.cpp  joueurhumain.h  joueurordinateur.cpp  joueurordinateur.h  main.cpp  match.cpp  match.h  morpion.cpp
PROJET/: .gitignore  CMakeLists.txt  IAffichage.h  Morpion.ui  fenetreprincipal.cpp  fenetreprincipal.h  fenetreprincipal.ui  jeudames.h  joueurordinateur.h  main.cpp  mainwindow.cpp  mainwindow.ui  menuprincipal.cpp  menuprincipal.ui
PROJET-QMAKE/: PROJET-QMAKE.pro  main.cpp  mainconsole.cpp
PROJET-QMAKE/Models/Affichage/: affichageconsole.cpp  affichageconsole.h
PROJET-QMAKE/Models/Factory/: grillefactory.cpp  grillefactory.h  jeufactory.cpp  jeufactory.h  joueurfactory.cpp
PROJET-QMAKE/Models/Grille/: grille.cpp  grille.h
PROJET-QMAKE/Models/Interfaces/: AGrille.h  AJoueur.h
PROJET-QMAKE/Models/Jeux/: jeudames.cpp  jeudames.h  jeumorpion.h  jeuothello.cpp  jeuothello.h  jeupuissance4.cpp  jeupuissance4.h
PROJET-QMAKE/Models/Joueur/: joueurhumain.h  joueurordinateur.cpp
PROJET-QMAKE/Models/Joueurs/: joueurhumain.cpp  joueurhumain.h  joueurordinateur.h
PROJET-QMAKE/Models/Saisie/: saisieconsole.cpp  saisieconsole.h
PROJET-QMAKE/UI/Forms/: menuprincipal.ui  morpionwidget.ui
PROJET-QMAKE/UI/Widgets/: menuprincipal.cpp  menuprincipal.h  morpionwidget.cpp
PROJET-QMAKE/UnitTests/: CMakeLists.txt  testmorpion.cpp  testothello.cpp
TD1/: Makefile  README.md
TD1/sources/: exo1.cpp  exo2.cpp  exo3.cpp  main.cpp
TD1/sources/headers/: exo1.h  exo2.h  exo3.h
TP-Refacto/: .gitignore  AGrille.h  AJoueur.h  CMakeLists.txt  Direction.h  IAffichage.h  IChoisirCoup.h  IGrille.h  IGrilleInit.h  IJeu.cpp  IJeu.h  ISauvegarder.h  Input.h  README.md  TypesJeu.h  accueil.cpp  accueil.h  accueil.ui  affichageconsole.cpp  affichageconsole.h  affichagegui.cpp  affichagegui.h  coordonnees.h  fenetreprincipal.cpp  fenetreprincipal.h  fenetreprincipale.cpp  fenetreprincipale.h  fenetreprincipale.ui  grille.cpp  grille.h  grillefactory.cpp  grillefactory.h  inputconsole.cpp  inputconsole.h  inputgui.cpp  inputgui.h  jeton.h  jeudames.cpp  jeudames.h  jeufactory.cpp  (+34 more)
TP-Refacto/Docs/: TP5.mdj
TP-Refacto/UnitTests/: CMakeLists.txt  testdames.cpp  testgrille.cpp  testjeufactory.cpp  testmorpion.cpp  testothello.cpp  testpuissance4.cpp
TP1/: Makefile  README.md
TP1/sources/: exo1.cpp  exo2.cpp  main.cpp
TP1/sources/headers/: exo1.h
TP2/: README.md  carre.h  cercle.h  point.cpp  point.h  triangle.cpp
TP3/: README.md  UML-Game.mdj  grille.cpp  grille.h  jeton.h  jeu.cpp  jeu.h  joueur.cpp  joueur.h  main.cpp  match.cpp  morpion.cpp  morpion.h  puissance4.cpp  puissance4.h
TP3-Refacto/: .gitignore  CMakeLists.txt  IAffichage.h  IGrille.h  IJeu.h  IJoueur.h  ISaisie.h  InterfaceUtilisateur.cpp  InterfaceUtilisateur.h  README.md  TypesAffichage.h  TypesJeu.h  affichageconsole.cpp  affichageconsole.h  configjeu.h  grille.cpp  grille.h  grillefactory.cpp  grillefactory.h  inputconsole.cpp  jeufactory.cpp  jeufactory.h  jeumorpion.cpp  jeumorpion.h  jeuothello.cpp  jeuothello.h  jeupuissance4.cpp  jeupuissance4.h  jeusession.cpp  jeusession.h  joueurfactory.cpp  joueurfactory.h  joueurhumain.cpp  joueurhumain.h  joueurordinateur.cpp  joueurordinateur.h  main.cpp  saisieconsole.cpp  saisieconsole.h
TP3-Refacto/TestOthello/: CMakeLists.txt  tst_testothello.cpp
TP3-Refacto/UnitTests/: CMakeLists.txt  testothello.cpp
TP3/UML/: UML-Game.mdj
class_basics/: CMakeLists.txt  carre.cpp  cercle.cpp  main.cpp  rectangle.cpp  rectangle.h  triangle.h
cli_games/: README.md  grille.cpp  joueur.cpp  match.cpp
dsa_basics/sources/: exo3.cpp
dsa_basics/sources/headers/: exo2.h  exo3.h
gui_games/: Assets.qrc  IAffichage.h  IJeu.h  accueil.h  affichagegui.cpp  grillefactory.cpp  inputconsole.cpp  inputconsole.h  inputgui.h  jeudames.cpp  jeudames.h  jeufactory.cpp  jeumorpion.cpp  jeumorpion.h  jeupuissance4.cpp  joueurfactory.cpp  joueurordinateur.cpp  joueurordinateur.h  mainwindow.h
gui_games/UnitTests/: CMakeLists.txt
